--- a/gallery.html
+++ b/gallery.html
@@ -4,15 +4,15 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Title displayed in browser tab-->
-    <title>Home Page</title>
-    <!-- Add icon library -->
+    <title>Gallery</title>
+    <!-- social icon stylesheet -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <!-- stylesheet -->
     <link rel="stylesheet" href="style/main.css" />
-
+    <!-- gallery slideshow javascript-->
     <script>
       var slideIndex = 1;
       showSlides(slideIndex);
@@ -57,6 +57,7 @@
       <li><a href="gallery.html">Gallery</a></li>
     </ul>
   </nav>
+
   <body>
     <div class="goal-section">
       <div class="slideshow-container">
