--- a/about.html
+++ b/about.html
@@ -4,17 +4,14 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Title displayed in browser tab-->
-    <title>Home Page</title>
+    <title>About</title>
 
-    <!-- Add icon library -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <!-- stylesheet -->
     <link rel="stylesheet" href="style/main.css" />
-
-    <!-- fonts-->
   </head>
 
   <nav class="fill">
