--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Title displayed in browser tab-->
-    <title>Home Page</title>
+    <title>Resources</title>
 
     <!-- Add icon library -->
     <link
