--- a/resources.html
+++ b/resources.html
@@ -5,16 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Title displayed in browser tab-->
     <title>Resources</title>
-
-    <!-- Add icon library -->
+    <!-- social icon stylesheet -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <!-- stylesheet -->
     <link rel="stylesheet" href="style/main.css" />
-
-    <!-- fonts-->
   </head>
 
   <nav class="fill">
