nav & about update
-fixed nav bar with inline styling
-created 4 divs in a square for mission and goal section in about.html

--- a/resources.html
+++ b/resources.html
@@ -25,7 +25,7 @@
     </ul>
   </nav>
   <body>
-    <div class="mission-section">
+    <div class="green-section">
       <h1 class="r-heading">Resources</h1>
       <div class="row">
         <div class="r-info">
