--- a/gallery.html
+++ b/gallery.html
@@ -59,7 +59,7 @@
   </nav>
 
   <body>
-    <div class="goal-section">
+    <div class="gray-section">
       <div class="slideshow-container">
         <div class="mySlides fade">
           <div class="number-text">1 / 3</div>
