--- a/getinvolved.html
+++ b/getinvolved.html
@@ -166,26 +166,26 @@
     <section class="garden-section">
       <div class="contact-container">
         <form action="/action_page.php">
-          <label for="fname">First Name</label>
+          <label for="fname">First & Last Name</label>
           <input
             type="text"
             id="fname"
             name="firstname"
-            placeholder="Your name.."
+            placeholder="Your name"
           />
 
-          <label for="lname">Last Name</label>
+          <label for="email">Email Address</label>
           <input
             type="text"
-            id="lname"
-            name="lastname"
-            placeholder="Your last name.."
+            id="email"
+            name="Email"
+            placeholder="example@gmail.com"
           />
 
-          <label for="subject">Subject</label>
+          <label for="subject">Message</label>
           <textarea
-            id="subject"
-            name="subject"
+            id="message"
+            name="message"
             placeholder="Write something.."
             style="height: 200px"
           ></textarea>
