--- a/getinvolved.html
+++ b/getinvolved.html
@@ -25,6 +25,19 @@
     </ul>
   </nav>
   <body>
+    <div class="get-involved-info">
+      <h1 class="garden-heading2">How can I get involved?</h1>
+      <br />
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+    </div>
     <h1 class="garden-heading">Orlando, FL Community Garden Locations</h1>
     <section class="garden-section">
       <div style="overflow-x: auto">
