--- a/resources.html
+++ b/resources.html
@@ -38,7 +38,7 @@
           >
           <p>
             Planting flowers, trees, vegetables and other plants that are
-            appropriate for you zone will ensure that these plants grow well
+            appropriate for your zone will ensure that these plants grow well
             from year to year.
           </p>
           <hr />
