--- a/gallery.html
+++ b/gallery.html
@@ -1,114 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--Head section contains metadata (not displayed in page)-->
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--Title displayed in browser tab-->
-    <title>Gallery</title>
-    <!-- social icon stylesheet -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <!-- stylesheet -->
-    <link rel="stylesheet" href="style/main.css" />
-    <!-- gallery slideshow javascript-->
-    <script>
-      var slideIndex = 1;
-      showSlides(slideIndex);
+<!--Head section contains metadata (not displayed in page)-->
 
-      function plusSlides(n) {
-        showSlides((slideIndex += n));
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--Title displayed in browser tab-->
+  <title>Gallery</title>
+  <!-- social icon stylesheet -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="style/main.css" />
+  <!-- gallery slideshow javascript-->
+  <script>
+    var slideIndex = 1;
+    showSlides(slideIndex);
+
+    function plusSlides(n) {
+      showSlides((slideIndex += n));
+    }
+
+    function currentSlide(n) {
+      showSlides((slideIndex = n));
+    }
+
+    function showSlides(n) {
+      var i;
+      var slides = document.getElementsByClassName("mySlides");
+      var dots = document.getElementsByClassName("dot");
+      if (n > slides.length) {
+        slideIndex = 1;
       }
-
-      function currentSlide(n) {
-        showSlides((slideIndex = n));
+      if (n < 1) {
+        slideIndex = slides.length;
       }
-
-      function showSlides(n) {
-        var i;
-        var slides = document.getElementsByClassName("mySlides");
-        var dots = document.getElementsByClassName("dot");
-        if (n > slides.length) {
-          slideIndex = 1;
-        }
-        if (n < 1) {
-          slideIndex = slides.length;
-        }
-        for (i = 0; i < slides.length; i++) {
-          slides[i].style.display = "none";
-        }
-        for (i = 0; i < dots.length; i++) {
-          dots[i].className = dots[i].className.replace(" active", "");
-        }
-        slides[slideIndex - 1].style.display = "block";
-        dots[slideIndex - 1].className += " active";
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
       }
-    </script>
-  </head>
+      for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex - 1].style.display = "block";
+      dots[slideIndex - 1].className += " active";
+    }
+  </script>
+</head>
 
-  <nav class="fill">
-    <h1>URBAN FARMING</h1>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="getinvolved.html">Get Involved</a></li>
-      <li><a href="resources.html">Resources</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-    </ul>
-  </nav>
+<nav class="fill">
+  <h1>URBAN FARMING</h1>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="getinvolved.html">Get Involved</a></li>
+    <li><a href="resources.html">Resources</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+  </ul>
+</nav>
 
-  <body>
-    <div class="gray-section">
-      <div class="slideshow-container">
-        <div class="mySlides fade">
-          <div class="number-text">1 / 3</div>
-          <img src="./img/gallery-img1.jpg" style="width: 100%" />
-        </div>
-
-        <div class="mySlides fade">
-          <div class="number-text">2 / 3</div>
-          <img src="./img/gallery-img2.jpg" style="width: 100%" />
-        </div>
-
-        <div class="mySlides fade">
-          <div class="number-text">3 / 3</div>
-          <img src="./img/gallery-img3.jpg" style="width: 100%" />
-        </div>
-
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+<body>
+  <div class="gray-section">
+    <div class="slideshow-container">
+      <div class="mySlides fade">
+        <div class="number-text">1 / 3</div>
+        <img src="./img/gallery-img1.jpg" style="width: 100%" />
       </div>
-      <br />
 
-      <div style="text-align: center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
+      <div class="mySlides fade">
+        <div class="number-text">2 / 3</div>
+        <img src="./img/gallery-img2.jpg" style="width: 100%" />
       </div>
+
+      <div class="mySlides fade">
+        <div class="number-text">3 / 3</div>
+        <img src="./img/gallery-img3.jpg" style="width: 100%" />
+      </div>
+
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
-    <script>
-      showSlides(slideIndex);
-    </script>
+    <br />
 
-    <footer>
-      <div class="footer-social">
+    <div style="text-align: center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+  </div>
+  <script>
+    showSlides(slideIndex);
+  </script>
+
+  <footer>
+    <div class="grid">
+
+      <!--SECTION 1-->
+      <div class="grid-item item1">
+        <h4>About</h4>
+        <p>Growlando Urban Farming is a non-profit agriculture program that works to provide sustainable and localized
+          food systems in the Greater Orlando area.
+          The introduction of our urban farming program can help reduce negative environmental impacts by promoting
+          sustainable agriculture as well as increase
+          the sense of interconnection within communities. We strive to provide long-term food security as well as
+          improve economic, social, and environmental problems.
+          Let's grow together.</p>
+      </div>
+
+      <!--SECTION 2-->
+      <div class="grid-item item2">
+        <h4>Menu</h4>
         <ul>
-          <li>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-youtube"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-          </li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="getinvolved.html">Get Involved</a></li>
+          <li><a href="resources.html">Resources</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
         </ul>
       </div>
-      <p>footer content | 2021</p>
-    </footer>
-  </body>
+
+      <!--SECTION 3-->
+      <div class="grid-item item3">
+        <h4>Useful Links</h4>
+        <ul>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms of Use</a></li>
+        </ul>
+      </div>
+
+      <!--SECTION 4-->
+      <div class="grid-item item4">
+        <p>Copyright &copy Growlando Urban Farming 2021</p>
+
+        <div class=" footer-social">
+          <ul>
+            <li>
+              <a href="#"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-youtube"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
