--- a/resources.html
+++ b/resources.html
@@ -1,109 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--Head section contains metadata (not displayed in page)-->
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--Title displayed in browser tab-->
-    <title>Resources</title>
-    <!-- social icon stylesheet -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <!-- stylesheet -->
-    <link rel="stylesheet" href="style/main.css" />
-  </head>
+<!--Head section contains metadata (not displayed in page)-->
 
-  <nav class="fill">
-    <h1>URBAN FARMING</h1>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="getinvolved.html">Get Involved</a></li>
-      <li><a href="resources.html">Resources</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-    </ul>
-  </nav>
-  <body>
-    <div class="green-section">
-      <h1 class="r-heading">Resources</h1>
-      <div class="row">
-        <div class="r-info">
-          <h2>Florida Garden Zone</h2>
-          <br />
-          <a
-            class="resource"
-            href="https://www.gardeningknowhow.com/planting-zones/florida-planting-zones.htm"
-            >Click Here</a
-          >
-          <p>
-            Planting flowers, trees, vegetables and other plants that are
-            appropriate for your zone will ensure that these plants grow well
-            from year to year.
-          </p>
-          <hr />
-        </div>
-        <div class="r-info">
-          <h2>Orlando Backyard Chicken Permit</h2>
-          <br />
-          <a
-            class="resource"
-            href="https://www.orlando.gov/Building-Development/Planning-Approvals/Apply-for-a-Backyard-Chicken-Permit"
-            >Click Here</a
-          >
-          <p>
-            The city issues a limited number of Backyard Chicken Permits to
-            allow urban chicken farming in approved areas while protecting the
-            health, safety and welfare of all residents.
-          </p>
-          <hr />
-        </div>
-        <div class="r-info">
-          <h2>Florida Planting Calendar</h2>
-          <br />
-          <a
-            class="resource"
-            href="https://www.ufseeds.com/florida-vegetable-planting-calendar.html"
-            >Click Here</a
-          >
-          <p>
-            Knowing your first and last frost dates will help you start your
-            vegetable seeds at the right time.
-          </p>
-          <hr />
-        </div>
-        <div class="r-info">
-          <h2>Orlando Farmers Market</h2>
-          <br />
-          <a class="resource" href="https://www.orlandofarmersmarket.com/"
-            >Click Here</a
-          >
-          <p>
-            The primary theme of the market is related to produce, plants and
-            specialty foods.
-          </p>
-          <hr />
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--Title displayed in browser tab-->
+  <title>Resources</title>
+  <!-- social icon stylesheet -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="style/main.css" />
+</head>
+
+<nav class="fill">
+  <h1>URBAN FARMING</h1>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="getinvolved.html">Get Involved</a></li>
+    <li><a href="resources.html">Resources</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+  </ul>
+</nav>
+
+<body>
+  <div class="green-section">
+    <h1 class="r-heading">Resources</h1>
+    <div class="row">
+      <div class="r-info">
+        <h2>Florida Garden Zone</h2>
+        <br />
+        <a class="resource" href="https://www.gardeningknowhow.com/planting-zones/florida-planting-zones.htm">Click
+          Here</a>
+        <p>
+          Planting flowers, trees, vegetables and other plants that are
+          appropriate for your zone will ensure that these plants grow well
+          from year to year.
+        </p>
+        <hr />
+      </div>
+      <div class="r-info">
+        <h2>Orlando Backyard Chicken Permit</h2>
+        <br />
+        <a class="resource"
+          href="https://www.orlando.gov/Building-Development/Planning-Approvals/Apply-for-a-Backyard-Chicken-Permit">Click
+          Here</a>
+        <p>
+          The city issues a limited number of Backyard Chicken Permits to
+          allow urban chicken farming in approved areas while protecting the
+          health, safety and welfare of all residents.
+        </p>
+        <hr />
+      </div>
+      <div class="r-info">
+        <h2>Florida Planting Calendar</h2>
+        <br />
+        <a class="resource" href="https://www.ufseeds.com/florida-vegetable-planting-calendar.html">Click Here</a>
+        <p>
+          Knowing your first and last frost dates will help you start your
+          vegetable seeds at the right time.
+        </p>
+        <hr />
+      </div>
+      <div class="r-info">
+        <h2>Orlando Farmers Market</h2>
+        <br />
+        <a class="resource" href="https://www.orlandofarmersmarket.com/">Click Here</a>
+        <p>
+          The primary theme of the market is related to produce, plants and
+          specialty foods.
+        </p>
+        <hr />
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="grid">
+
+      <!--SECTION 1-->
+      <div class="grid-item item1">
+        <h4>About</h4>
+        <p>Growlando Urban Farming is a non-profit agriculture program that works to provide sustainable and localized
+          food systems in the Greater Orlando area.
+          The introduction of our urban farming program can help reduce negative environmental impacts by promoting
+          sustainable agriculture as well as increase
+          the sense of interconnection within communities. We strive to provide long-term food security as well as
+          improve economic, social, and environmental problems.
+          Let's grow together.</p>
+      </div>
+
+      <!--SECTION 2-->
+      <div class="grid-item item2">
+        <h4>Menu</h4>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="getinvolved.html">Get Involved</a></li>
+          <li><a href="resources.html">Resources</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+        </ul>
+      </div>
+
+      <!--SECTION 3-->
+      <div class="grid-item item3">
+        <h4>Useful Links</h4>
+        <ul>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms of Use</a></li>
+        </ul>
+      </div>
+
+      <!--SECTION 4-->
+      <div class="grid-item item4">
+        <p>Copyright &copy Growlando Urban Farming 2021</p>
+
+        <div class=" footer-social">
+          <ul>
+            <li>
+              <a href="#"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-youtube"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
-    <footer>
-      <div class="footer-social">
-        <ul>
-          <li>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-youtube"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-          </li>
-        </ul>
-      </div>
-      <p>footer content | 2021</p>
-    </footer>
-  </body>
+  </footer>
+</body>
+
 </html>
