--- a/about.html
+++ b/about.html
@@ -1,93 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--Head section contains metadata (not displayed in page)-->
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--Title displayed in browser tab-->
-    <title>About</title>
-    <!-- social icon stylesheet -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <!-- stylesheet -->
-    <link rel="stylesheet" href="style/main.css" />
-  </head>
+<!--Head section contains metadata (not displayed in page)-->
 
-  <nav class="fill">
-    <h1>URBAN FARMING</h1>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="getinvolved.html">Get Involved</a></li>
-      <li><a href="resources.html">Resources</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-    </ul>
-  </nav>
-  <body>
-    <section>
-      <div class="container">
-        <div class="left"></div>
-        <div class="right">
-          <div class="content">
-            <h1>What is Urban Farming?</h1>
-            <p>
-              Locally grown and consumed produce has been shown to reduce the
-              use of carbon-based fuels due to transportation over long
-              distances and thereby reduces carbon emissions; and the
-              implementation of an urban agriculture ordinance will restore
-              agricultural business to the local economy and bring fresh produce
-              to those areas where the population may not have the means to
-              obtain fresh produce.
-            </p>
-          </div>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--Title displayed in browser tab-->
+  <title>About</title>
+  <!-- social icon stylesheet -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="style/main.css" />
+</head>
+
+<nav class="fill">
+  <h1>URBAN FARMING</h1>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="getinvolved.html">Get Involved</a></li>
+    <li><a href="resources.html">Resources</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+  </ul>
+</nav>
+
+<body>
+  <section>
+    <div class="container">
+      <div class="left"></div>
+      <div class="right">
+        <div class="content">
+          <h1>What is Urban Farming?</h1>
+          <p>
+            Locally grown and consumed produce has been shown to reduce the
+            use of carbon-based fuels due to transportation over long
+            distances and thereby reduces carbon emissions; and the
+            implementation of an urban agriculture ordinance will restore
+            agricultural business to the local economy and bring fresh produce
+            to those areas where the population may not have the means to
+            obtain fresh produce.
+          </p>
         </div>
       </div>
-    </section>
-    <div class="row1 noMargin">
-      <div class="mission-section">
-        <h1>Mission Statement</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-          commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
-          et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
-          felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
-          consequat massa quis enim.
-        </p>
-      </div>
-      <div class="mission-section-image">image goes here</div>
     </div>
-    <div class="row1 noMargin">
-      <div class="goal-section-image">image goes here</div>
-      <div class="goal-section">
-        <h1>Goals</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-          commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
-          et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
-          felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
-          consequat massa quis enim.
-        </p>
-      </div>
+  </section>
+  <div class="row1 noMargin">
+    <div class="mission-section">
+      <h1>Mission Statement</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+        commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
+        et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
+        felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
+        consequat massa quis enim.
+      </p>
     </div>
-    <footer>
-      <div class="footer-social">
+    <div class="mission-section-image">image goes here</div>
+  </div>
+  <div class="row1 noMargin">
+    <div class="goal-section-image">image goes here</div>
+    <div class="goal-section">
+      <h1>Goals</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+        commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
+        et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
+        felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
+        consequat massa quis enim.
+      </p>
+    </div>
+  </div>
+  <footer>
+    <div class="grid">
+
+      <!--SECTION 1-->
+      <div class="grid-item item1">
+        <h4>About</h4>
+        <p>Growlando Urban Farming is a non-profit agriculture program that works to provide sustainable and localized
+          food systems in the Greater Orlando area.
+          The introduction of our urban farming program can help reduce negative environmental impacts by promoting
+          sustainable agriculture as well as increase
+          the sense of interconnection within communities. We strive to provide long-term food security as well as
+          improve economic, social, and environmental problems.
+          Let's grow together.</p>
+      </div>
+
+      <!--SECTION 2-->
+      <div class="grid-item item2">
+        <h4>Menu</h4>
         <ul>
-          <li>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-youtube"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-          </li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="getinvolved.html">Get Involved</a></li>
+          <li><a href="resources.html">Resources</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
         </ul>
       </div>
-      <p>footer content | 2021</p>
-    </footer>
-  </body>
+
+      <!--SECTION 3-->
+      <div class="grid-item item3">
+        <h4>Useful Links</h4>
+        <ul>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms of Use</a></li>
+        </ul>
+      </div>
+
+      <!--SECTION 4-->
+      <div class="grid-item item4">
+        <p>Copyright &copy Growlando Urban Farming 2021</p>
+
+        <div class=" footer-social">
+          <ul>
+            <li>
+              <a href="#"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-youtube"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
