working on image gallery

--- a/about.html
+++ b/about.html
@@ -54,10 +54,15 @@
         consequat massa quis enim.
       </p>
     </div>
-    <div class="mission-section-image">image goes here</div>
+	<!--EDIT IMAGE SIZES-->
+    <div class="mission-section-image">
+	<img src="img/img7.jpg" width="100%" alt="">
+	</div>
   </div>
   <div class="row1 noMargin">
-    <div class="goal-section-image">image goes here</div>
+    <div class="goal-section-image">
+	<img src="img/img17.jpg" width="100%" alt="">
+	</div>
     <div class="goal-section">
       <h1>Goals</h1>
       <p>
@@ -70,10 +75,10 @@
     </div>
   </div>
   <footer>
-    <div class="grid">
+    <div class="footer-grid">
 
       <!--SECTION 1-->
-      <div class="grid-item item1">
+      <div class="footer-grid-item item1">
         <h4>About</h4>
         <p>Growlando Urban Farming is a non-profit agriculture program that works to provide sustainable and localized
           food systems in the Greater Orlando area.
@@ -85,7 +90,7 @@
       </div>
 
       <!--SECTION 2-->
-      <div class="grid-item item2">
+      <div class="footer-grid-item item2">
         <h4>Menu</h4>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -97,7 +102,7 @@
       </div>
 
       <!--SECTION 3-->
-      <div class="grid-item item3">
+      <div class="footer-grid-item item3">
         <h4>Useful Links</h4>
         <ul>
           <li><a href="#">Privacy Policy</a></li>
@@ -106,7 +111,7 @@
       </div>
 
       <!--SECTION 4-->
-      <div class="grid-item item4">
+      <div class="footer-grid-item item4">
         <p>Copyright &copy Growlando Urban Farming 2021</p>
 
         <div class=" footer-social">
