--- a/gallery.html
+++ b/gallery.html
@@ -57,8 +57,23 @@
 </nav>
 
 <body>
+
   <div class="gray-section">
-    <div class="slideshow-container">
+    <div class="featuredImg">
+  <h1>Featured Post</h1><br/>
+  <p>Featured Post info<br/><br/>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  Eu non diam phasellus vestibulum lorem sed risus ultricies.
+  Felis eget velit aliquet sagittis id consectetur purus ut.
+  Volutpat commodo sed egestas egestas fringilla phasellus.
+  Nulla aliquet enim tortor at auctor urna nunc. Suspendisse interdum
+  consectetur libero id faucibus nisl tincidunt eget. Mauris in
+  aliquam sem fringilla ut morbi. Ut sem nulla pharetra diam sit amet nisl.
+ </p>
+  <div class="slideshow-container">
+  
+  
       <div class="mySlides fade">
         <div class="number-text">1 / 3</div>
         <img src="./img/gallery-img1.jpg" style="width: 100%" />
@@ -84,16 +99,43 @@
       <span class="dot" onclick="currentSlide(2)"></span>
       <span class="dot" onclick="currentSlide(3)"></span>
     </div>
+
+  <script>
+    showSlides(slideIndex);
+  </script>
+  </div>
+  <!--CREATE MODAL FOR IMAGES-->
+  	<h2 style="text-align: center">Gallery</h2>
+	<div class="img-grid gallery">
+	<img src="img/img7.jpg" width="100%" alt="pathway between rows of fruit">
+	<img src="img/img8.jpg" width="100%" alt="close-up of person planting">
+	<img src="img/img9.jpg" width="100%" alt="person planting seeds">
+	<img src="img/img12.jpg" width="100%" alt="girl watering plants">
+	<img src="img/img11.jpg" width="100%" alt="two people picking fruit in field">
+	<img src="img/img13.jpg" width="100%" alt="watering plants">
+	<img src="img/img14.jpg" width="100%" alt="close-up of small potted plants">
+	<img src="img/img15.jpg" width="100%" alt="man in uniform gardening">
+	<img src="img/img16.jpg" width="100%" alt="aerial view of gardening tools">
+	<img src="img/img17.jpg" width="100%" alt="greenhouse with rows of plants">
+	<img src="img/img18.jpg" width="100%" alt="aerial view of an example of urban farming">
+	<img src="img/img19.jpg" width="100%" alt="many people placing plants in soil">
+	<img src="img/img20.jpg" width="100%" alt="potting plants">
+	<img src="img/img21.jpg" width="100%" alt="sunset over purple flowers">
+	<img src="img/img22.jpg" width="100%" alt="sign that reads 'we are in the garden'">
+	<img src="img/img23.jpg" width="100%" alt="hands holding three zucchini">
+	
+	
+  </div>
   </div>
   <script>
     showSlides(slideIndex);
   </script>
 
   <footer>
-    <div class="grid">
+    <div class="footer-grid">
 
       <!--SECTION 1-->
-      <div class="grid-item item1">
+      <div class="footer-grid-item item1">
         <h4>About</h4>
         <p>Growlando Urban Farming is a non-profit agriculture program that works to provide sustainable and localized
           food systems in the Greater Orlando area.
@@ -105,7 +147,7 @@
       </div>
 
       <!--SECTION 2-->
-      <div class="grid-item item2">
+      <div class="footer-grid-item item2">
         <h4>Menu</h4>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -117,7 +159,7 @@
       </div>
 
       <!--SECTION 3-->
-      <div class="grid-item item3">
+      <div class="footer-grid-item item3">
         <h4>Useful Links</h4>
         <ul>
           <li><a href="#">Privacy Policy</a></li>
@@ -126,7 +168,7 @@
       </div>
 
       <!--SECTION 4-->
-      <div class="grid-item item4">
+      <div class="footer-grid-item item4">
         <p>Copyright &copy Growlando Urban Farming 2021</p>
 
         <div class=" footer-social">
