--- a/resources.html
+++ b/resources.html
@@ -75,10 +75,10 @@
     </div>
   </div>
   <footer>
-    <div class="grid">
+    <div class="footer-grid">
 
       <!--SECTION 1-->
-      <div class="grid-item item1">
+      <div class="footer-grid-item item1">
         <h4>About</h4>
         <p>Growlando Urban Farming is a non-profit agriculture program that works to provide sustainable and localized
           food systems in the Greater Orlando area.
@@ -90,7 +90,7 @@
       </div>
 
       <!--SECTION 2-->
-      <div class="grid-item item2">
+      <div class="footer-grid-item item2">
         <h4>Menu</h4>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -102,7 +102,7 @@
       </div>
 
       <!--SECTION 3-->
-      <div class="grid-item item3">
+      <div class="footer-grid-item item3">
         <h4>Useful Links</h4>
         <ul>
           <li><a href="#">Privacy Policy</a></li>
@@ -111,7 +111,7 @@
       </div>
 
       <!--SECTION 4-->
-      <div class="grid-item item4">
+      <div class="footer-grid-item item4">
         <p>Copyright &copy Growlando Urban Farming 2021</p>
 
         <div class=" footer-social">
