--- a/about.html
+++ b/about.html
@@ -56,12 +56,12 @@
     </div>
 	<!--EDIT IMAGE SIZES-->
     <div class="mission-section-image">
-	<img src="img/img7.jpg" width="100%" alt="">
+	<p style="text-align: center">image here</p>
 	</div>
   </div>
   <div class="row1 noMargin">
     <div class="goal-section-image">
-	<img src="img/img17.jpg" width="100%" alt="">
+	<p style="text-align: center">image here</p>
 	</div>
     <div class="goal-section">
       <h1>Goals</h1>
