image changes (again)

--- a/about.html
+++ b/about.html
@@ -43,6 +43,7 @@
       </div>
     </div>
   </section>
+  <div class="mission-section-grid">
   <div class="row1 noMargin">
     <div class="mission-section">
       <h1>Mission Statement</h1>
@@ -56,12 +57,13 @@
     </div>
 	<!--EDIT IMAGE SIZES-->
     <div class="mission-section-image">
-	<p style="text-align: center">image here</p>
+	<img src="img/img24.jpg" width="100%" alt="">
+	</div>
 	</div>
   </div>
   <div class="row1 noMargin">
     <div class="goal-section-image">
-	<p style="text-align: center">image here</p>
+	<img src="img/img25.jpg" width="100%" alt="">
 	</div>
     <div class="goal-section">
       <h1>Goals</h1>
