--- a/about.html
+++ b/about.html
@@ -57,13 +57,13 @@
     </div>
 	<!--EDIT IMAGE SIZES-->
     <div class="mission-section-image">
-	<img src="img/img24.jpg" width="100%" alt="">
+	<img src="img/img24.jpg" width="100%" alt="close-up of pink flowers">
 	</div>
 	</div>
   </div>
   <div class="row1 noMargin">
     <div class="goal-section-image">
-	<img src="img/img25.jpg" width="100%" alt="">
+	<img src="img/img25.jpg" width="100%" alt="blue sky and sun over field of yellow flowers">
 	</div>
     <div class="goal-section">
       <h1>Goals</h1>
