--- a/gallery.html
+++ b/gallery.html
@@ -107,22 +107,54 @@
   <!--CREATE MODAL FOR IMAGES-->
   	<h2 style="text-align: center">Gallery</h2>
 	<div class="img-grid gallery">
+	<a target="_blank" href="img/img7.jpg">
 	<img src="img/img7.jpg" width="100%" alt="pathway between rows of fruit">
+	</a>
+	<a target="_blank" href="img/img8.jpg">
 	<img src="img/img8.jpg" width="100%" alt="close-up of person planting">
+	</a>
+	<a target="_blank" href="img/img9.jpg">
 	<img src="img/img9.jpg" width="100%" alt="person planting seeds">
+	</a>
+	<a target="_blank" href="img/img12.jpg">
 	<img src="img/img12.jpg" width="100%" alt="girl watering plants">
+	</a>
+	<a target="_blank" href="img/img11.jpg">
 	<img src="img/img11.jpg" width="100%" alt="two people picking fruit in field">
+	</a>
+	<a target="_blank" href="img/img13.jpg">
 	<img src="img/img13.jpg" width="100%" alt="watering plants">
+	</a>
+	<a target="_blank" href="img/img14.jpg">
 	<img src="img/img14.jpg" width="100%" alt="close-up of small potted plants">
+	</a>
+	<a target="_blank" href="img/img15.jpg">
 	<img src="img/img15.jpg" width="100%" alt="man in uniform gardening">
+	</a>
+	<a target="_blank" href="img/img16.jpg">
 	<img src="img/img16.jpg" width="100%" alt="aerial view of gardening tools">
+	</a>
+	<a target="_blank" href="img/img17.jpg">
 	<img src="img/img17.jpg" width="100%" alt="greenhouse with rows of plants">
+	</a>
+	<a target="_blank" href="img/img18.jpg">
 	<img src="img/img18.jpg" width="100%" alt="aerial view of an example of urban farming">
+	</a>
+	<a target="_blank" href="img/img19.jpg">
 	<img src="img/img19.jpg" width="100%" alt="many people placing plants in soil">
+	</a>
+	<a target="_blank" href="img/img20.jpg">
 	<img src="img/img20.jpg" width="100%" alt="potting plants">
+	</a>
+	<a target="_blank" href="img/img21.jpg">
 	<img src="img/img21.jpg" width="100%" alt="sunset over purple flowers">
+	</a>
+	<a target="_blank" href="img/img22.jpg">
 	<img src="img/img22.jpg" width="100%" alt="sign that reads 'we are in the garden'">
+	</a>
+	<a target="_blank" href="img/img23.jpg">
 	<img src="img/img23.jpg" width="100%" alt="hands holding three zucchini">
+	</a>
 	
 	
   </div>
