--- a/about.html
+++ b/about.html
@@ -31,13 +31,15 @@
         <div class="content">
           <h1>What is Urban Farming?</h1>
           <p>
-            Locally grown and consumed produce has been shown to reduce the
-            use of carbon-based fuels due to transportation over long
-            distances and thereby reduces carbon emissions; and the
-            implementation of an urban agriculture ordinance will restore
-            agricultural business to the local economy and bring fresh produce
-            to those areas where the population may not have the means to
-            obtain fresh produce.
+            Growlando is an Orlando, FL based company that strives to make 
+            efficient use of our beautiful city space in order to feed the
+            very people who inhabit it. Urban farming consists of cultivating,
+            processing, and distributing food in or around the city’s urban
+            areas. This leads to sustainable methods that contribute to
+            Orlando’s healthy food supply, cutting carbon emissions, and 
+            local economy. With the help of amazing staff, community volunteers, 
+            and green spaces all around, we have cultivated Orlando’s first city 
+            wide urban farming program.
           </p>
         </div>
       </div>
