--- a/about.html
+++ b/about.html
@@ -40,6 +40,8 @@
             local economy. With the help of amazing staff, community volunteers, 
             and green spaces all around, we have cultivated Orlando’s first city 
             wide urban farming program.
+
+          
           </p>
         </div>
       </div>
@@ -53,7 +55,7 @@
         Our mission is to supply Orlando with an abundance of food for
         the community and those in need while encouraging the establishment
         of unused land, getting locals active and outside, and finally 
-        creating an economically sustainable program for our city.
+        creating an economically sustainable program for our city. 
 
       </p>
     </div>
@@ -68,11 +70,13 @@
 	<img src="img/img25.jpg" width="100%" alt="blue sky and sun over field of yellow flowers">
 	</div>
     <div class="goal-section">
-      <h1>Vision Statement</h1>
+      <h1>Goals</h1>
       <p>
-        Our vision is to be Orlando's most community-centric urban farming 
-        program where locals contribute, connect, and benefit from sustainable 
-        opportunities that give back to our great city.
+        The introduction of our urban farming program can help reduce negative
+        environmental impacts by promoting sustainable agriculture as well as 
+        increase the sense of interconnection within communities. We strive to 
+        provide long-term food security as well as improve economic, social, and 
+        environmental problems.
       </p>
     </div>
   </div>
@@ -81,13 +85,9 @@
 
       <!--SECTION 1-->
       <div class="footer-grid-item item1">
-        <h4>About</h4>
-        <p>Growlando Urban Farming is a non-profit agriculture program that works to provide sustainable and localized
-          food systems in the Greater Orlando area.
-          The introduction of our urban farming program can help reduce negative environmental impacts by promoting
-          sustainable agriculture as well as increase
-          the sense of interconnection within communities. We strive to provide long-term food security as well as
-          improve economic, social, and environmental problems.
+        <h4>Growlando Urban Farming</h4>
+        <p>We are a non-profit agriculture program that works
+          to provide sustainable and localized food systems in the Greater Orlando area.
           Let's grow together.</p>
       </div>
 
