footer "about" content change

--- a/gallery.html
+++ b/gallery.html
@@ -169,12 +169,8 @@
       <!--SECTION 1-->
       <div class="footer-grid-item item1">
         <h4>About</h4>
-        <p>Growlando Urban Farming is a non-profit agriculture program that works to provide sustainable and localized
-          food systems in the Greater Orlando area.
-          The introduction of our urban farming program can help reduce negative environmental impacts by promoting
-          sustainable agriculture as well as increase
-          the sense of interconnection within communities. We strive to provide long-term food security as well as
-          improve economic, social, and environmental problems.
+        <p>We are a non-profit agriculture program that works
+          to provide sustainable and localized food systems in the Greater Orlando area.
           Let's grow together.</p>
       </div>
 
