fonts & article section placeholder

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -40,7 +40,16 @@
         mollit anim id est laborum.
       </p>
     </div>
-    <h1 class="garden-heading">Orlando, FL Community Garden Locations</h1>
+    <div class="garden-section">
+      <h1 class="garden-heading">Orlando, FL Community Garden Locations</h1>
+      <br />
+      <p>
+        Check out our upcoming events! In order to participate, use the contact
+        form at the bottom of the page to sign up at least 24 hours prior to the
+        event. Make sure to include the event code, your full name, and any
+        questions you might have.
+      </p>
+    </div>
     <section class="garden-section">
       <div style="overflow-x: auto">
         <table id="community-gardens">
