--- a/resources.html
+++ b/resources.html
@@ -16,7 +16,7 @@
   </head>
 
   <nav class="fill">
-    <h1>URBAN FARMING</h1>
+    <h1>Growlando</h1>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
