font and icon color change

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
       <div class="footer-grid">
         <!--SECTION 1-->
         <div class="footer-grid-item item1">
-          <h4>Growlando Urban Farming</h4>
+          <h4>About Growlando</h4>
           <p>
             We are a non-profit agriculture program that works to provide
             sustainable and localized food systems in the Greater Orlando area.
