--- a/getinvolved.html
+++ b/getinvolved.html
@@ -173,15 +173,15 @@
         <ul class="circles inline">
           <li class="circle-list">
             <div class="circled">1</div>
-            <p>Use the contact us form below</p>
+            <p>Use the "Contact Us" form below.</p>
           </li>
           <li class="circle-list">
             <div class="circled">2</div>
-            <p>Specify which garden location you want to sponser</p>
+            <p>Specify which garden location you want to sponser.</p>
           </li>
           <li class="circle-list">
             <div class="circled">3</div>
-            <p>Include donation amount or materials to sponser</p>
+            <p>Include the donation amount or materials to sponser.</p>
           </li>
         </ul>
       </div>
@@ -222,7 +222,7 @@
       <div class="footer-grid">
         <!--SECTION 1-->
         <div class="footer-grid-item item1">
-          <h4>About</h4>
+          <h4>About Growlando</h4>
           <p>
             We are a non-profit agriculture program that works to provide
             sustainable and localized food systems in the Greater Orlando area.
