--- a/resources.html
+++ b/resources.html
@@ -95,7 +95,7 @@
       <div class="footer-grid">
         <!--SECTION 1-->
         <div class="footer-grid-item item1">
-          <h4>About</h4>
+          <h4>About Growlando</h4>
           <p>
             We are a non-profit agriculture program that works to provide
             sustainable and localized food systems in the Greater Orlando area.
